@@ -82,6 +82,7 @@ extern const php_hash_ops php_hash_salsa10_ops;
 extern const php_hash_ops php_hash_salsa20_ops;
 extern const php_hash_ops php_hash_fnv132_ops;
 extern const php_hash_ops php_hash_fnv164_ops;
+extern const php_hash_ops php_hash_joaat_ops;
 
 #define PHP_HASH_HAVAL_OPS(p,b)	extern const php_hash_ops php_hash_##p##haval##b##_ops;
 
